# TaxEDSL

./: .gitignore  README.md  TaxEDSL.cabal  stack.yaml
src/: Money.hs  TaxEDSL.hs
src/TaxEDSL/: Core.hs  Money.hs  TaxPolicies.hs
test/: .#Main.hs  Main.hs
