name:                TaxEDSL
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/adamConnerSax/TaxEDSL#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2018 Adam Conner-Sax
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     TaxEDSL.Core
                     , TaxEDSL.Money
                     , TaxEDSL.TaxPolicies
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , free
                     , array
                     , mtl
  default-language:    Haskell2010



executable Test
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base >= 4.7
               , array
               , TaxEDSL
  default-language: Haskell2010                                                                   
    
source-repository head
  type:     git
  location: https://github.com/adamConnerSax/TaxEDSL
